[project]
name = "VRCTwitterImageLoader"
version = "0.3.0"
description = "Upload Twitter images to GitHub Pages for VRChat"
authors = [
    { name = "VarYU", email = "varyu.vrc@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromedriver-binary-sync>=0.2.2",
    "pandas>=2.2.3",
    "pillow>=10.4.0",
    "selenium>=4.25.0",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "ruff>=0.6.9",
]
