[project]
name = "VRCTwitterImageLoader"
version = "0.4.0"
description = "Upload Twitter images to GitHub Pages for VRChat"
authors = [
    { name = "VarYU", email = "varyu.vrc@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.3",
    "playwright>=1.48.0",
]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "ruff>=0.6.9",
]
